--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asthatrade/jsvortex",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Vortex APIs to place orders in AsthaTrade Flow application",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "csv-parse": "^5.4.0",
     "ws": "^8.13.0"
   },
   "engines": {
