--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
   "engines": {
     "node": ">=8.0.0"
   },
-  "engineStrict": true
+  "engineStrict": true,
+  "publishConfig": {
+    "access": "public"
+  }
 }
